fix nav bar spacing take 2

--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@ body {
 }
 
 .theme-toggle {
-  margin-right: 1rem;
+  margin-right: .2rem;
   margin-left: auto;
   display: block !important;
 }
